# ibex35-rag

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  docker-compose.yml  finance.py  main.py  openapi.json  pyproject.toml
frontend/: Dockerfile  app.py  requirements.txt
infra/alertmanager/: alertmanager.yml
infra/docker/: Dockerfile
infra/grafana/dashboards/: ibex35_rag.json  ibex35_rag_todo.json  rag_monitor_completo.json
infra/grafana/provisioning/dashboards/: default.yml
infra/grafana/provisioning/datasources/: alertmanager.yml  loki-tempo.yml
infra/loki/: loki.yml
infra/otel/: otel-collector.yml
infra/prometheus/: prometheus.yml
infra/prometheus/rules/: rag_alerts.yml
infra/promtail/: promtail.yml
infra/tempo/: tempo.yml
scripts/: ingest.py  smoke_test.py
src/: config.py  logging_config.py
src/agents/: financial_agent.py  tools.py
src/api/: cache.py  dependencies.py  main.py  models.py  rate_limiter.py
src/api/routes/: health.py  ingest.py  query.py
src/ingestion/: pdf_loader.py  pipeline.py
src/monitoring/: metrics.py
src/rag/: engine.py  prompts.py  schema.py
src/vectorstore/: store.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cache.py  test_metrics.py  test_ollama_handler.py  test_pdf_loader.py  test_rate_limiter.py
