[project]
name = "ibex35-rag"
version = "0.1.0"
description = "Production-ready RAG system for IBEX35 financial reports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # RAG
    "llama-index>=0.12.0",
    "llama-index-llms-ollama>=0.5.0",
    "llama-index-embeddings-ollama>=0.5.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "llama-index-readers-file>=0.4.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Redis
    "redis>=5.2.0",
    "hiredis>=3.1.0",
    # MLflow
    "mlflow>=2.19.0",
    # Monitoring
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.21.0",
    # Logging
    "structlog>=24.4.0",
    # Data
    "yfinance>=0.2.50",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    # PDF
    "pymupdf>=1.25.0",
    "chromadb>=0.6.0",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "fakeredis>=2.26.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[project.scripts]
ingest = "scripts.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "fakeredis>=2.26.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]
